Updated for Django 1.9, Ubuntu 14.04, and Vagrant 1.8.5.

--- a/playbook.yml
+++ b/playbook.yml
@@ -1,16 +1,18 @@
 ---
-- hosts: "{{target}}"
+- hosts: all
   remote_user: vagrant
   sudo: True
   vars:
     user: root
     graphite:
       version: master
-      timezone: Europe/Brussels
+#      timezone: Europe/Brussels
+      timezone: America/New_York
       workers: 4
       secret_key: 'ob3sow^ik#4q(k5*tgw&6j+osyr^@0jus$yd+-#^&^d#%yim1!'
       nginx_server_port: 8082 ## port on which you can access Graphite, port 80 is reserved for grafana, if you use 80 you won't be able to access graphite
-      nginx_server_name: 10.0.0.20
+#      nginx_server_name: 10.0.0.20
+      nginx_server_name: 'ubuntu-graphite'
       nginx_htpasswd: 'admin:YWG41BPzVAkN6'
       nginx_enable_ssl: false
       nginx_server_port_ssl: 8083 ## port to use for SSL (443 is reserved for grafana)
@@ -24,7 +26,8 @@
 
     grafana_version: 1.6.1
     grafana_nginx_listen: "*" # nginx listen address, `127.0.0.1` by default, you need to use the public ip with you want an external access
-    grafana_nginx_server_name: 10.0.0.20
+#    grafana_nginx_server_name: 10.0.0.20
+    grafana_nginx_server_name: 'ubuntu-graphite'
     grafana_nginx_htpasswd: 'admin:YWG41BPzVAkN6'
     grafana_nginx_enable_ssl: false
     grafana_nginx_ssl_path: "/etc/nginx/ssl/grafana" ## Folder where the SSL files will be added, default to /etc/nginx/ssl
